--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,4 +4,5 @@ pandas==2.2.0
 python-dotenv==1.0.1
 runeq==0.17.2
 pydantic==2.6.1
-python-multipart==0.0.9 
+python-multipart==0.0.9
+pyarrow==15.0.0 
